External/Releases/A/6-100/V2024.04.09/Body/OldVersions/README_V1.md
***

# 4 year anniversary update (Beta 19, 2024, Tuesday, April 9th)

**Tag:** `V2024.04.09`

**Released on:** `2024, Tuesday, April 9th at 12:23 pm PST`

***Pre-release***

This is the 19th version of the 4 year anniversary update beta. The full release will be created on 2024, Saturday, May 25th. This is the seventeenth beta release to be tagged. In the future, I plan to tag the first 3 betas, I just don't know how to right now. These updates should continue daily for a while.

| 📣️ Feedback 💬️ |
|---|
| [`Give feedback on Mastodon`](https://techhub.social/deck/@seanpm2001/112237731368032617) |
| [:octocat: `Give feedback on GitHub`](https://github.com/seanpm2001/seanpm2001/discussions/90/) |

---

## What's Changed (manually written by @seanpm2001)

- **Archives:**
- - Archived data for release 18
- - Archived data for discussion 89
- - Archived files related to the 19th remodel
- **README:**
- - Updated README to version 93 (beta 19)
- **New media:**
- - Lots of social media logos (for the `Online identity` section)
- - Lots of other site logos (for the `Online identity` section)
- **Segments:**
- - No changes to segments this time.
- **Other:**
- - No other changes

***
