External/Releases/A/6-100/V2024.04.10/Body/OldVersions/README_V1.md

***

# 4 year anniversary update (Beta 20, 2024, Wednesday, April 10th)

**Tag:** `V2024.04.10`

**Released on:** `2024, Wednesdahy, April 10th at 02:32 pm PST`

***Pre-release***

This is the 20th version of the 4 year anniversary update beta. The full release will be created on 2024, Saturday, May 25th. This is the eighteenth beta release to be tagged. In the future, I plan to tag the first 3 betas, I just don't know how to right now. These updates should continue daily for a while.

| 📣️ Feedback 💬️ |
|---|
| [`Give feedback on Mastodon`](https://techhub.social/deck/@seanpm2001/112237731368032617) |
| [:octocat: `Give feedback on GitHub`](https://github.com/seanpm2001/seanpm2001/discussions/91/) |

---

## What's Changed (manually written by @seanpm2001)

- **Archives:**
- - Archived data for release 19
- - Archived data for discussion 90
- - Archived files related to the 20th remodel
- **README:**
- - Updated README to version 94 (beta 20)
- **New media:**
- - Clocktree logo (in `Other sites`) for usage in the `Online Identity` section
- **Segments:**
- - No changes to segments this time.
- **Other:**
- - No other changes

***
